added ability to add new note and notes rendering by type

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @import 'cmps/app-header.css';
 @import 'cmps/app-footer.css';
+@import 'apps/keep/note-app.css';
 
 * {
     box-sizing: border-box;
