--- a/styles/apps/mail/mail-preview.css
+++ b/styles/apps/mail/mail-preview.css
@@ -1,7 +1,48 @@
+.mail-route {
+  text-decoration: none;
+  color: #202124;
+}
+
 .mail-container {
   background-color: rgba(255, 255, 255, 0.902);
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.mail-content {
+  flex-basis: 100%;
+  font-size: 20px;
+}
+
+.mail-content .mail-star:hover {
+  color: gold;
+}
+
+.mail-container .mail-actions {
+  color: #808080;
+  display: flex;
+  gap: 25px;
+  font-size: 20px;
+}
+
+.mail-actions > span {
+  width: 35px;
+  height: 35px;
+  z-index: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.mail-actions > span:hover {
+  color: black;
+  background: rgba(90, 90, 90, 0.1);
+}
+
+.mail-container > * {
+  padding: 10px;
 }
 
 .mail-container:hover {
@@ -9,7 +50,6 @@
   box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
     0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
   z-index: 2;
-  background-color: yellow;
 }
 
 .mail-read {
