--- a/styles/apps/keep/note-app.css
+++ b/styles/apps/keep/note-app.css
@@ -1,13 +1,17 @@
+@import './cmps/add.css';
 @import './cmps/todos.css';
 @import './cmps/img.css';
+@import './cmps/notes.css';
+@import './cmps/filter.css';
+@import './cmps/list.css';
+@import './cmps/video.css';
 
-.notes-list {
-    font-size: 1.2rem;
-    color: linen;
-    height: 250px;
+.note-app {
+    display: flex;
+
+    margin-top: 15px;
 }
 
-.note-card {
-    background-color: red;
-    margin-bottom: 5px;
+.main-keep-container {
+    width: 70%;
 }
