--- a/styles/cmps/app-footer.css
+++ b/styles/cmps/app-footer.css
@@ -1,8 +1,6 @@
 footer {
-    position: absolute;
-    bottom: 0;
-
     width: 100%;
+    height: 100px;
 
     background-color: #696969;
     color: linen;
