--- a/styles/apps/keep/cmps/list.css
+++ b/styles/apps/keep/cmps/list.css
@@ -1,7 +1,4 @@
 .notes-list {
-    display: grid;
-    /* grid-template-columns: repeat(2, 1fr); */
-    grid-auto-rows: minmax(100px, min-content);
-    grid: auto-flow;
-    gap: 20px;
+    /* column-count: 2; */
+    column-gap: 10px;
 }
