--- a/styles/apps/keep/cmps/notes.css
+++ b/styles/apps/keep/cmps/notes.css
@@ -1,7 +1,12 @@
 .note-card {
-    width: 240px;
-    /* height: fit-content; */
-    padding: 5px;
+    /* width: 240px; */
+    /* padding: 5px; */
+
+    margin: 0;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    margin-bottom: 10px;
+    break-inside: avoid;
 
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     
