--- a/styles/apps/mail/cmps/mail-compose.css
+++ b/styles/apps/mail/cmps/mail-compose.css
@@ -1,28 +1,79 @@
 .mail-compose {
-  display: flex;
-  align-items: center;
+  width: 600px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #ffffff;
 }
 
 .mail-compose .compose-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.compose-form > * {
+  border: 2px solid #f3f5f7;
+  box-shadow: -2px 2px 10px 0 #ccc;
   width: 100%;
 }
 
-.compose-form .compose-title {
-  padding: 5px 10px;
+.compose-form .compose-form-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #404040;
+  color: white;
+  padding: 13px;
+  margin: 0;
 }
-.compose-form .compose-to {
-  padding: 5px 10px;
+
+.compose-form-header > h2 {
+  font-size: 1em;
+  letter-spacing: 0.2px;
+  font-weight: bold;
+  margin: 0;
 }
-.compose-form .compose-subject {
-  padding: 5px 10px;
+
+.compose-form .compose-content {
+  display: flex;
+  flex-direction: column;
 }
+.compose-content > * {
+  font-size: 1em;
+  padding: 5px 10px;
+  border: 0;
+  border-bottom: 2px solid #f3f5f7;
+  border-right: 2px solid #f3f5f7;
+  outline: none;
+}
+
 .compose-form .compose-body {
-  direction: ltr;
-  min-height: 266px;
+  min-height: 250px;
+  max-height: 250px;
+  max-width: 100%;
+  font-size: 1.5em;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.compose-form .compose-actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.compose-form .send-btn {
+  color: white;
+  background: #1a73e8;
+  text-align: center;
+  padding: 12px 17px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+.compose-form .close-form {
+  cursor: pointer;
+}
+
+.compose-form .compose-trash {
+  opacity: 0.5;
+  font-size: 1.8em;
 }
