--- a/styles/apps/keep/cmps/filter.css
+++ b/styles/apps/keep/cmps/filter.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-between; */
 
-    width: 30%;
+    width: 200px;
 }
