Working on compose form/saving draft every 5s/ live edit percentage/work on mail preview and long text

--- a/styles/apps/mail/mail-preview.css
+++ b/styles/apps/mail/mail-preview.css
@@ -14,6 +14,8 @@
 .mail-content {
   flex-basis: 100%;
   font-size: 20px;
+  /* display: flex; */
+  /* justify-content: space-between; */
 }
 
 .mail-content .mail-star:hover {
