--- a/styles/apps/keep/cmps/list.css
+++ b/styles/apps/keep/cmps/list.css
@@ -8,6 +8,10 @@
     margin-bottom: 50px;
 }
 
+.notes-list > * {
+    min-height: 100%;
+}
+
 @media screen and (max-width: 1024px) {
     .masonry {
         column-count: 2;
