--- a/styles/apps/mail/cmps/mail-compose.css
+++ b/styles/apps/mail/cmps/mail-compose.css
@@ -4,11 +4,12 @@
   bottom: 0;
   right: 0;
   background-color: #ffffff;
+  z-index: 10000;
 }
 
 .mail-compose .compose-form {
   border: 2px solid #f3f5f7;
-  box-shadow: -2px 2px 10px 0 #ccc;
+  box-shadow: -2px 2px 8px 0 #000000;
   width: 100%;
 }
 
@@ -35,10 +36,10 @@
 }
 .compose-content > * {
   font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 5px 10px;
-  border: 0;
+  border: none;
   border-bottom: 2px solid #f3f5f7;
-  border-right: 2px solid #f3f5f7;
   outline: none;
 }
 
@@ -46,9 +47,7 @@
   min-height: 250px;
   max-height: 250px;
   max-width: 100%;
-  font-size: 1.5em;
-  font-style: italic;
-  font-weight: bold;
+  font-size: 1.2em;
 }
 
 .compose-form .compose-actions {
