--- a/styles/apps/mail/cmps/mail-top-filter.css
+++ b/styles/apps/mail/cmps/mail-top-filter.css
@@ -1,20 +1,21 @@
-.mail-top-filter {
-  width: 100%;
-  margin-bottom: 15px;
-}
-
 .search-bar {
   width: 100%;
-  height: 62px;
-  font-size: 25px;
+  height: 52px;
+  /* font-size: 25px; */
   border-radius: 10px;
   background-color: #f2f5f5cc;
   padding-left: 50px;
-  padding-right: 10px;
+  margin-bottom: 5px;
   text-align: left;
   border: none;
   outline: none;
   position: relative;
+}
+
+.top-filters {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .search-bar::placeholder {
@@ -22,11 +23,11 @@
 }
 
 .search-bar:hover {
-  box-shadow: 3px 3px 8px 4px #dadce0;
+  box-shadow: 1px 1px 3px 0px #000000;
 }
 
 .search-bar:focus {
-  box-shadow: 3px 3px 8px 4px #dadce0;
+  box-shadow: 1px 1px 3px 0px #000000;
   background: #ffffff;
 }
 
@@ -34,7 +35,7 @@
   all: unset;
   position: absolute;
   border-radius: 10px;
-  height: 62px;
+  height: 52px;
   padding-left: 20px;
   z-index: 1;
   color: lightgray;
