--- a/styles/apps/mail/mail-preview.css
+++ b/styles/apps/mail/mail-preview.css
@@ -5,7 +5,6 @@
 
 .mail-container {
   background-color: rgba(255, 255, 255, 0.902);
-  padding: 5px 0;
   display: flex;
   align-items: center;
   border-bottom: 2px solid #f3f5f7;
@@ -13,9 +12,6 @@
 
 .mail-content {
   flex-basis: 100%;
-  font-size: 20px;
-  /* display: flex; */
-  /* justify-content: space-between; */
 }
 
 .mail-content .mail-star:hover {
@@ -47,10 +43,6 @@
   background: rgba(90, 90, 90, 0.1);
 }
 
-.mail-container > * {
-  padding: 10px;
-}
-
 .mail-container:hover {
   cursor: pointer;
   box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
@@ -68,4 +60,12 @@
 
 .checked {
   color: gold;
+}
+
+.mail-timestamp {
+  float: right;
+}
+
+.mail-from {
+  padding: 60px;
 }
