--- a/styles/cmps/app-header.css
+++ b/styles/cmps/app-header.css
@@ -2,9 +2,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  width: 100%;
+  height: 10vh;
   background-color: #696969;
   color: linen;
+  font-size: 18px;
 }
 
 header a {
