--- a/styles/apps/keep/cmps/add.css
+++ b/styles/apps/keep/cmps/add.css
@@ -41,9 +41,6 @@
 
     border-radius: 50%;
     z-index: 10;
-
-    font-size: 1.2rem;
-    opacity: .3;
 }
 
 .note-add .input-row span:nth-of-type(1) {
@@ -63,6 +60,15 @@
     opacity: 1;
 
     background-color: rgba(90, 90, 90, 0.1);
+}
+
+.input-row span i {
+    font-size: 1.2rem;
+    opacity: .3;
+}
+
+.input-row span.type-selected > i {
+    opacity: 1;
 }
 
 .note-add input[type="submit"] {
