--- a/styles/apps/keep/cmps/list.css
+++ b/styles/apps/keep/cmps/list.css
@@ -1,15 +1,10 @@
 .masonry {
     column-count: 3;
-    gap: 25px;
 }
 
 .pinned-notes {
-    height: 100%;
-    margin-bottom: 50px;
-}
-
-.notes-list > * {
-    min-height: 100%;
+    min-height: 600px;
+    margin-bottom: 70px;
 }
 
 @media screen and (max-width: 1024px) {
