--- a/styles/apps/keep/cmps/notes.css
+++ b/styles/apps/keep/cmps/notes.css
@@ -2,6 +2,7 @@
     break-inside: avoid;
 
     margin: 15px;
+    padding: 10px;
 
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     
@@ -9,6 +10,7 @@
     color: #2c2c2c;
     font-size: 1.2rem;
     font-weight: 500;
+    text-align: center;
 }
 
 .note-video, .note-img {
@@ -23,7 +25,7 @@
 }
 
 .note-card:hover {
-    /* transform: scale(1.012); */
+    transform: scale(1.015);
 }
 
 .note-card:hover .actions {
@@ -39,14 +41,27 @@
     padding-top: 1em;
 }
 
-.actions:hover {
+.actions span:not(:last-child) {
+    opacity: .56;
+}
+
+.pinned .actions span:first-child {
+    opacity: 1;
+}
+
+.actions span:hover {
     cursor: pointer;
+    opacity: 1;
+}
+
+.color-picker {
+    opacity: 1;
 }
 
 .color-picker {
     position: absolute;
     right: 0;
-    top: 2em;
+    top: -1em;
     padding-top: 10px;
 }
 
