--- a/styles/cmps/app-header.css
+++ b/styles/cmps/app-header.css
@@ -1,25 +1,129 @@
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 10vh;
-  background-color: #696969;
-  color: linen;
-  font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    background-color: #3f3f3f;
+    color: linen;
+    font-size: 18px;
 }
 
 header a {
-  text-decoration: none;
-  color: linen;
+    text-decoration: none;
+    color: linen;
 }
 
-header a:visited {
-  color: linen;
+.logo {
+    width: 150px;
+    height: 100%;
+}
+
+.logo-link {
+    height: 100%;
+}
+
+.logo-link img {
+    height: 100%;
 }
 
 .main-nav {
-  display: flex;
-  justify-content: space-evenly;
-  width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    width: 55%;
+    height: 100%;
+}
+
+.hamburger {
+    display: none;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px 10px;
+    transition: all .3s ease-in-out;
+    background-color: linen;
+}
+
+@media screen and (min-width: 768px) {   
+    .main-nav a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 1.2rem;
+        width: 100%;
+        height: 100%;
+    }
+
+    .main-nav a:hover {
+        background-color: #ccc;
+        color: #222;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main-nav {
+        position: fixed;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        right: -100%;
+        top: 0;
+
+        width: 350px;
+        height: 70%;
+        border-radius: 15px 0 0 15px;
+
+        text-align: center;
+        background-color: #3f3f3f;
+
+        z-index: 100;
+        transition: .3;
+    }
+
+    .main-nav.mobile-active {
+        right: 0;
+    }
+
+    .nav-link {
+        display: inline-block;
+        width: 100%;
+        line-height: 100px;
+        padding: 1rem 0;
+    }
+
+    .nav-link:hover {
+        background-color: #222;
+    }
+
+    .nav-link:first-child:hover {
+        border-radius: 15px 0 0 0;
+    }
+
+    .nav-link:last-child:hover {
+        border-radius: 0 0 0 15px;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        z-index: 101;
+    }
+
+    .hamburger.mobile-active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.mobile-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.mobile-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+    }
 }
