--- a/styles/apps/mail/cmps/mail-top-filter.css
+++ b/styles/apps/mail/cmps/mail-top-filter.css
@@ -1,14 +1,18 @@
+.mail-top-search {
+}
+
 .search-bar {
   width: 100%;
   height: 52px;
   border-radius: 10px;
   background-color: #f2f5f5cc;
   padding-left: 50px;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   text-align: left;
   border: none;
   outline: none;
   position: relative;
+  box-shadow: 1px 1px 3px 0px #000000;
 }
 
 .top-filters {
@@ -18,11 +22,7 @@
 }
 
 .search-bar::placeholder {
-  color: lightgray;
-}
-
-.search-bar:hover {
-  box-shadow: 1px 1px 3px 0px #000000;
+  color: #000000;
 }
 
 .search-bar:focus {
@@ -37,5 +37,5 @@
   height: 52px;
   padding-left: 20px;
   z-index: 1;
-  color: lightgray;
+  color: #000000;
 }
