--- a/styles/apps/keep/cmps/notes.css
+++ b/styles/apps/keep/cmps/notes.css
@@ -24,10 +24,6 @@
     height: 200px;
 }
 
-.note-card:hover {
-    transform: scale(1.015);
-}
-
 .note-card:hover .actions {
     visibility: visible;
 }
@@ -37,16 +33,19 @@
     justify-content: space-evenly;
 
     position: relative;
-    visibility: hidden;
     padding-top: 1em;
 }
 
-.actions span:not(:last-child) {
+.actions span {
     opacity: .56;
 }
 
 .pinned .actions span:first-child {
     opacity: 1;
+}
+
+.color-choose {
+    opacity: 1 !important;
 }
 
 .actions span:hover {
@@ -71,9 +70,9 @@
     display: inline-block;
     cursor: pointer;
     border-radius: 50%;
-    border: 1px solid rgb(230, 230, 230);
+    border: 2px solid rgb(230, 230, 230);
 }
 
 .color-blob.selected {
-    border: 1px solid black;
+    border: 2px solid black;
 }
