--- a/styles/apps/mail/cmps/mail-top-filter.css
+++ b/styles/apps/mail/cmps/mail-top-filter.css
@@ -1,13 +1,12 @@
-.mail-top-search {
-}
-
 .search-bar {
   width: 100%;
   height: 52px;
   border-radius: 10px;
   background-color: #f2f5f5cc;
   padding-left: 50px;
-  margin-bottom: 8px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  max-width: 600px;
   text-align: left;
   border: none;
   outline: none;
