final delivery for CA sprint-3 :(

--- a/styles/apps/mail/views/mail-index.css
+++ b/styles/apps/mail/views/mail-index.css
@@ -10,6 +10,12 @@
 
 /* medium */
 @media (max-width: 760px) {
+    .layout-wrapper {
+        flex-grow: 0;
+        width: 95%;
+        margin-left: auto;
+    }
+
   .mail-index {
     /* flex-direction: row-reverse; */
   }
