--- a/styles/apps/mail/mail-preview.css
+++ b/styles/apps/mail/mail-preview.css
@@ -19,6 +19,7 @@
   display: flex;
   align-items: center;
   border-bottom: 2px solid #f3f5f7;
+  padding: 5px;
 }
 
 .mail-container .mail-actions {
