--- a/styles/apps/keep/cmps/add.css
+++ b/styles/apps/keep/cmps/add.css
@@ -9,6 +9,10 @@
     margin-bottom: 30px;
 }
 
+.note-add form {
+    position: relative;
+}
+
 .input-row {
     position: relative;
 }
@@ -17,18 +21,35 @@
     max-width: 600px;
 }
 
+.inputs {
+    box-shadow: 0px 10px 13px -7px #000000, 0px 5px 15px 0px rgba(0,0,0,0);
+    border: 1px solid rgba(90, 90, 90, 0.719);
+    border-radius: 5px;
+}
+
+.inputs.input-focus {
+    height: 120px;
+    outline: 2px solid #000000;
+}
+
 .note-add .input-row input {
     width: 100%;
-    height: 100%;
     padding: 10px 10px;
 
-    border-radius: 5px;
-    border: 1px solid rgba(90, 90, 90, 0.719);
-    box-shadow: 0px 10px 13px -7px #000000, 0px 5px 15px 0px rgba(0,0,0,0);
+    border: none;
+    outline: none;
 
     font-size: 1rem;
     font-weight: 600;
     opacity: .6;
+}
+
+.note-text-inp {
+    height: 70%;
+}
+
+.note-title-inp {
+    height: 30%
 }
 
 .note-add .input-row input::placeholder {
@@ -70,19 +91,19 @@
     background-color: rgba(90, 90, 90, 0.1);
 }
 
-.input-row span i {
+.input-row span {
     font-size: 1.2rem;
-    opacity: .3;
+    opacity: .15;
 }
 
-.input-row span.type-selected > i {
+.input-row span.type-selected {
     opacity: 1;
 }
 
 .note-add input[type="submit"] {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    position: absolute;
+    left: 80%;
+    bottom: 5%;
 
     padding: 5px 10px;
     margin: 10px 0;
