--- a/styles/apps/keep/cmps/list.css
+++ b/styles/apps/keep/cmps/list.css
@@ -1,19 +1,60 @@
+body {
+    overflow-x: hidden;
+}
+
 .masonry {
-    column-count: 3;
+    position: relative;
+    column-count: 8;
 }
 
 .pinned-notes {
     min-height: 400px;
     margin-bottom: 30px;
+    padding-top: 50px;
 }
 
-@media screen and (max-width: 1024px) {
+.other-notes {
+    padding-top: 50px;
+}
+
+.pinned-notes-header, .unpinned-notes-header {
+    position: absolute;
+    width: 100%;
+    top: -10px;
+    left: 40%;
+}
+
+@media screen and (max-width: 2600px) {
+    .masonry {
+        column-count: 7;
+    }
+}
+
+@media screen and (max-width: 2300px) {
+    .masonry {
+        column-count: 6;
+    }
+}
+
+@media screen and (max-width: 1800px) {
+    .masonry {
+        column-count: 5;
+    }
+}
+
+@media screen and (max-width: 1420px) {
+    .masonry {
+        column-count: 3;
+    }
+}
+
+@media screen and (max-width: 890px) {
     .masonry {
         column-count: 2;
     }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 550px) {
     .masonry {
         column-count: 1;
     }
