--- a/styles/apps/mail/cmps/mail-side-filter.css
+++ b/styles/apps/mail/cmps/mail-side-filter.css
@@ -62,6 +62,7 @@
   position: absolute;
   padding: 10px;
 }
+
 .unread-emails-txt {
   display: flex;
   justify-content: center;
@@ -70,55 +71,57 @@
   border: none;
   padding: 5px;
   font-size: 0.875em;
+  cursor: default;
 }
 
 progress {
   width: 100%;
+  padding: 25px;
   height: 100%;
 }
 
 .sidenav-collapser {
-    display: none;
+  display: none;
 }
 
 .sidenav-collapser .line {
-    display: inline-block;
-    width: 3px;
-    height: 60px;
-    margin: 5px 1px;
-    transition: all .5s ease-in-out;
-    background-color: #222;
+  display: inline-block;
+  width: 3px;
+  height: 60px;
+  margin: 5px 1px;
+  transition: all 0.5s ease-in-out;
+  background-color: #222;
 }
 
 .sidenav-collapser {
-    margin-left: 2px;
+  margin-left: 2px;
 }
 
 /* BP */
 
 /* medium */
 @media screen and (min-width: 760px) {
-    .mail-side-filter a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  .mail-side-filter a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-        font-size: 1.2rem;
-        width: 100%;
-        height: 100%;
-    }
+    font-size: 1.2rem;
+    width: 100%;
+    height: 100%;
+  }
 
-    .mail-side-filter a:hover {
-        background-color: #ccc;
-        color: #222;
-    }
+  .mail-side-filter a:hover {
+    background-color: #ccc;
+    color: #222;
+  }
 }
 
 @media only screen and (max-width: 760px) {
-    .side-nav-container {
-        display: flex;
-        align-items: center;
-    }
+  .side-nav-container {
+    display: flex;
+    align-items: center;
+  }
 
   .mail-side-filter {
     position: fixed;
@@ -139,44 +142,44 @@ progress {
     transition: all 0.5s ease-in-out;
   }
 
-    .mail-side-filter.nav-open {
-        left: 0;
-    }
+  .mail-side-filter.nav-open {
+    left: 0;
+  }
 
-    .line.nav-open {
-        background-color: linen;
-    }
+  .line.nav-open {
+    background-color: linen;
+  }
 
   .compose-btn {
     font-size: 1em;
   }
 
-    .mail-side-filter a {
-        display: inline-block;
-        width: 100%;
-        padding: 2rem 1rem;
-    }
+  .mail-side-filter a {
+    display: inline-block;
+    width: 100%;
+    padding: 2rem 1rem;
+  }
 
-    .mail-side-filter a:hover {
-        background-color: #222;
-        color: linen;
-    }
+  .mail-side-filter a:hover {
+    background-color: #222;
+    color: linen;
+  }
 
-    .sidenav-collapser {
-        display: block;
-        cursor: pointer;
-        z-index: 1002;
-    }
+  .sidenav-collapser {
+    display: block;
+    cursor: pointer;
+    z-index: 1002;
+  }
 
-    .sidenav-collapser.nav-open .line:nth-child(2) {
-        opacity: 0;
-    }
+  .sidenav-collapser.nav-open .line:nth-child(2) {
+    opacity: 0;
+  }
 
-    .sidenav-collapser.nav-open .line:nth-child(1) {
+  .sidenav-collapser.nav-open .line:nth-child(1) {
     transform: translateY(8px);
-    }
+  }
 
-    .sidenav-collapser.nav-open .line:nth-child(3) {
+  .sidenav-collapser.nav-open .line:nth-child(3) {
     transform: translateY(-8px);
-    }
+  }
 }
