--- a/styles/apps/keep/cmps/notes.css
+++ b/styles/apps/keep/cmps/notes.css
@@ -101,5 +101,7 @@
 }
 
 @media only screen and (max-width: 550px) {
-    margin: 15px;   
+    .note-card {
+        margin-bottom: 30px;  
+    }
 }
